# onux

./: .gitignore  Makefile  README.md  critique2.md  design-decisions.md  pyproject.toml
docs/: api-reference.md  critique1.md  honest-api-rewrite.md  honest-api.md  index.md
docs/vignettes/: 01-signatures.md  02-modules.md  03-layers-and-models.md  04-hidden-outputs-and-debug.md  05-graph-patterns.md  06-custom-modules.md
src/onux/: __init__.py  core.py  examples.py  layers.py  modules.py  signatures.py
tests/: test_doctests.py
